re-commit auth google android, reset pass, manage product, news
