# CC/swagger.yaml
@@ -12,7 +12,8 @@ externalDocs:
 servers:
   # - url: http://localhost:5000/api/v1
   #   description: main url production server
-  - url: http://localhost:5000/api/v1
+  - url: https://nutriseeapi-838915593985.asia-southeast2.run.app/api/v1/
+  # - url: http://localhost:5000/api/v1
     description: Staging server for testing
 
 
@@ -42,21 +43,21 @@ paths:
 
   # /users:
   #   get:
-  #     summary: Mendapatkan daftar pengguna
+  #     summary: Mendapatkan semua data pengguna
   #     tags:
   #       - Users
   #     security:
   #       - bearerAuth: []
   #     responses:
   #       '200':
-  #         description: Daftar pengguna berhasil diambil
+  #         description: Data pengguna berhasil diambil
   #         content:
   #           application/json:
   #             schema:
-  #               type: array
-  #               items:
-  #                 $ref: '#/components/schemas/User'
+  #               $ref: '#/components/schemas/User'
   #       '401':
+  #         description: Token tidak valid
+  #       '403':
   #         description: Tidak diotorisasi
 
   /register:
@@ -98,10 +99,20 @@ paths:
           description: email tidak ditemukan
 
   /token:
-    get:
+    post:
       summary: Refresh token untuk sesi pengguna
       tags:
         - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                refreshToken:
+                  type: string
+                  example: "your-refresh-token"
       responses:
         '200':
           description: Token berhasil diperbarui
@@ -116,60 +127,248 @@ paths:
       tags: 
         - Auth
       responses:
-        '203':
-          description: Redirect ke link login google 
+        '302':
+          description: Redirect ke link login Google
+          headers:
+            Location:
+              description: URL untuk login Google
+              schema:
+                type: string
+                example: "https://accounts.google.com/o/oauth2/v2/auth?... "
+
         
   /auth/google/callback:
     get:
-      
       summary: Callback setelah login dengan Google
       parameters:
-        - in: path
+        - in: query
           name: code
           required: true
           description: Code dari Google
           schema:
-            type: string        
+            type: string
       tags:
         - Auth
       responses:
         '200':
           description: Login berhasil
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  accessToken:
+                    type: string
+                  refreshToken:
+                    type: object
+                    properties:
+                      refreshToken:
+                        type: string
+                      expiresIn:
+                        type: string
         '400':
           description: Gagal Login
         '500':
           description: Failed to exchange token
+          
   /forgot-password:
     post:
-        summary: Mengirimkan email permintaan reset password
-        tags:
-          - Auth
-        parameters:
-          - in: query
-            name: email
-            required: true
-            description: Email pengguna
+      summary: Mengirimkan email permintaan reset password
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
             schema:
-              type: string
-              
-        responses:
-          '200':
-            description: Logout berhasil
-          '204':
-            description: Refresh token tidak ditemukan
-          '401':
-            description: Tidak diotorisasi
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: "email@example.com"
+      responses:
+        '200':
+          description: Email reset password berhasil dikirim
+        '400':
+          description: Email tidak ditemukan
+
+  
+  /reset-password/{id}/{token}:
+    get:
+      summary: Mengambil halaman reset password
+      tags:
+        - Auth
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: ID pengguna
+          schema:
+            type: string
+        - in: path
+          name: token
+          required: true
+          description: Token reset password
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Halaman reset password berhasil dimuat
+        '400':
+          description: Token tidak valid atau sudah kadaluarsa
+        '401':
+          description: Pengguna tidak ditemukan atau password tidak cocok
+      
+    post:
+      summary: Mengatur ulang password pengguna
+      tags:
+        - Auth
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: ID pengguna
+          schema:
+            type: string
+        - in: path
+          name: token
+          required: true
+          description: Token reset password
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                password:
+                  type: string
+                  format: password
+                confirmPassword:
+                  type: string
+                  format: password
+      responses:
+        '200':
+          description: Password berhasil diatur ulang
+        '400':
+          description: Password dan konfirmasi password tidak cocok
+        '422':
+          description: Password dan konfirmasi password tidak sesuai aturan
+        '401':
+          description: Token tidak valid atau kadaluarsa
+        '404':
+          description: Pengguna tidak ditemukan
+        '500':
+          description: Terjadi kesalahan dalam proses pengubahan password
+
+
   /logout:
     delete:
       summary: Logout pengguna
       tags:
         - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                refreshToken:
+                  type: string
+                  description: Refresh token yang digunakan untuk logout
       responses:
         '200':
           description: Logout berhasil
         '204':
-          description: Refresh token tidak ditemukan
+          description: Refresh token tidak ditemukan atau tidak ada konten
+        '400':
+          description: Refresh token tidak valid
         '401':
+          description: Tidak diotorisasi
+        '500':
+          description: Terjadi kesalahan saat proses logout
+
+
+  
+  /product:
+    get:
+      summary: Mendapatkan daftar produk
+      tags:
+        - Products
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Daftar produk berhasil diambil
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Product'
+        '401':
+          description: Token tidak valid
+        '403':
+          description: Tidak diotorisasi
+    
+    post:
+      summary: Menambahkan produk baru
+      tags:
+        - Products
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Product'
+      responses:
+        '201':
+          description: Produk berhasil ditambahkan
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        '400':
+          description: Data produk tidak valid
+        '401':
+          description: Token tidak valid
+        '403':
+          description: Tidak diotorisasi
+          
+  
+  /product/{id}:
+    get:
+      summary: Mendapatkan detail produk berdasarkan ID
+      tags:
+        - Products
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: ID produk
+          schema:
+            type: integer
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Detail produk berhasil diambil
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        '404':
+          description: Produk tidak ditemukan
+        '401':
+          description: Token tidak valid
+        '403':
           description: Tidak diotorisasi
 
 
@@ -230,10 +429,10 @@ components:
       properties:
         username:
           type: string
-          example: "Ahmad"
+          example: "username"
         email:
           type: string
-          example: "ahmad@example.com"
+          example: "email@gmail.com"
         password:
           type: string
           format: password
@@ -249,7 +448,7 @@ components:
       properties:
         email:
           type: string
-          example: "ahmad@example.com"
+          example: "email@gmail.com"
         password:
           type: string
           format: password
@@ -279,3 +478,25 @@ components:
         category:
           type: string
           example: "health"
+    
+    Product:
+      type: object
+      properties:
+        name:
+          type: string
+          example: "Minuman Sehat"
+        image:
+          type: string
+          example: "https://example.com/image.jpg"
+        gradien:  # Jika ini adalah "grade", ganti menjadi nutriGrade atau grade
+          type: string
+          example: "B"
+        category:
+          type: string
+          enum: ["makanan", "minuman"]
+          example: "minuman"
+      required:
+        - name
+        - gradien
+        - category
+        - userId
